k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "azure-agent"
  namespace: "agents-cloud"
spec:
  selector:
    app: "azure-agent"
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
